# se-toolkit-hackathon

./: .env.docker.example  README.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
backend/: .env.tests.e2e.example  .env.tests.unit.example  Dockerfile  pyproject.toml
backend/src/lms_backend/: __init__.py  main.py  run.py
backend/src/tutor_backend/: database.py  main.py  models.py  run.py  settings.py
backend/src/tutor_backend/routers/: questions.py
caddy/: Caddyfile
mcp/: pyproject.toml
mcp/mcp-tutor/: pyproject.toml
mcp/mcp-tutor/src/mcp_tutor/: __init__.py  __main__.py  init.sql  server.py  settings.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot-websocket-channel/client-web-flutter/: pubspec.yaml
nanobot-websocket-channel/client-web-flutter/lib/: chat_screen.dart  login_screen.dart  main.dart  simple_markdown.dart
nanobot/workspace/: AGENTS.md  SOUL.md
nanobot/workspace/skills/tutor/: SKILL.md
