[project]
name = "tutor-backend"
version = "0.1.0"
description = "Personal Exam Tutor Backend API"
requires-python = "==3.14.*"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi==0.128.7",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tutor_backend*"]
