[project]
name = "mcp-tutor"
version = "1.0.0"
description = "MCP server for the tutor question database"
requires-python = "==3.14.*"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "mcp>=1.26.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_tutor*"]
